Added dependency to commons-codec apache library Changed code for using org.apache.commons.codec.binary.Base64 from commons-codec library (removed using sun.misc.BASE64Encoder/sun.misc.BASE64Decoder)